--- a/app/src/main/res/layout/fragment_fragment_bill.xml
+++ b/app/src/main/res/layout/fragment_fragment_bill.xml
@@ -5,6 +5,22 @@
     tools:context="com.example.ankhleu.trackingyourspendingv2.FragmentBill">
 
     <!-- TODO: Update blank fragment layout -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <CalendarView
+            android:id="@+id/calendarView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
