--- a/app/src/main/res/layout/fragment_fragment_bill.xml
+++ b/app/src/main/res/layout/fragment_fragment_bill.xml
@@ -11,6 +11,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+
+
         <CalendarView
             android:id="@+id/calendarView"
             android:layout_width="match_parent"
@@ -18,7 +20,7 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="75dp">
 
             <android.support.design.widget.FloatingActionButton
                 android:id="@+id/floatingActionButton"
